--- a/templates/visualizer.html
+++ b/templates/visualizer.html
@@ -53,13 +53,15 @@
 				This dataset contains information about Product name, Product price, Rate, Reviews, Summary and Sentiment in csv format. There are 104 different types of products of flipkart.com such as electronics items, clothing of men, women and kids, Home decor items, Automated systems, so on. It has 205053 rows and 6 columns. Also, if any product doesn't have any review but summary is present then Nan value already added to its blank space.
 				This dataset has multiclass label as sentiment such as positive, neutral amd negative.The sentiment given was based on column called Summary using NLP and Vader model. Also, after that we manually check the label and put it into the appropriate categories like if summary has text like okay, just ok or one positive and negative we labeled as neutral for better understanding while using this dataset for human languages. On the summary and price column, data cleaning method is already performed using python module called NumPy and Pandas which are famous.You can learn it also through any online resource.
 				Data was collected through web scraping using the library called beautifulsoup from flipkart.com. The scraping done in december 2022.
+				<br>
+				<br>
 				<b>Columns:</b>
 					<br><b>Product_name</b> &#8594; Name of the product.<br>
-					Product_price:Price of the product.
-					Rate: Customer's rating on product(Between 1 to 5).
-					Review: Customer's review on each product.
-					Summary: This columne include descriptive informationn of customer's thought on each product.
-					Sentiment: This column contains 3 label such as Positive, Negative and Neutral(Which was given based on Summary).
+					<b>Product_price</b> &#8594; Price of the product.<br>
+					<b>Rate</b> &#8594; Customer's rating on product(Between 1 to 5).<br>
+					<b>Review</b> &#8594; Customer's review on each product.<br>
+					<b>Summary</b> &#8594; This columne include descriptive informationn of customer's thought on each product.<br>
+					<b>Sentiment</b> &#8594; This column contains 3 label such as Positive, Negative and Neutral (Which was given based on Summary).
 			</p>
 			<br>
 			<div class="row">
@@ -84,19 +86,21 @@
 			<p style="font-family:Arial, Helvetica, sans-serif; background-color: white;">
 
 				Welcome. This is a Women's Clothing E-Commerce dataset revolving around the reviews written by customers. Its nine supportive features offer a great environment to parse out the text through its multiple dimensions. Because this is real commercial data, it has been anonymized, and references to the company in the review text and body have been replaced with “retailer”.
-				<b>Columns:</b>
+				<br>
+				<br>
+				<b>Columns:</b><br>
 				This dataset includes 23486 rows and 10 feature variables. Each row corresponds to a customer review, and includes the variables:
-
-				Clothing ID: Integer Categorical variable that refers to the specific piece being reviewed.
-				Age: Positive Integer variable of the reviewers age.
-				Title: String variable for the title of the review.
-				Review Text: String variable for the review body.
-				Rating: Positive Ordinal Integer variable for the product score granted by the customer from 1 Worst, to 5 Best.
-				Recommended IND: Binary variable stating where the customer recommends the product where 1 is recommended, 0 is not recommended.
-				Positive Feedback Count: Positive Integer documenting the number of other customers who found this review positive.
-				Division Name: Categorical name of the product high level division.
-				Department Name: Categorical name of the product department name.
-				Class Name: Categorical name of the product class name.
+				<br>
+				<br><b>Clothing ID</b> &#8594; Integer Categorical variable that refers to the specific piece being reviewed.
+				<br><b>Age</b> &#8594; Positive Integer variable of the reviewers age.
+				<br><b>Title</b> &#8594; String variable for the title of the review.
+				<br><b>Review Text</b> &#8594;String variable for the review body.
+				<br><b>Rating</b> &#8594;Positive Ordinal Integer variable for the product score granted by the customer from 1 Worst, to 5 Best.
+				<br><b>Recommended IND</b> &#8594;Binary variable stating where the customer recommends the product where 1 is recommended, 0 is not recommended.
+				<br><b>Feedback Count</b> &#8594;Positive Integer documenting the number of other customers who found this review positive.
+				<br><b>Division Name</b> &#8594;Categorical name of the product high level division.
+				<br><b>Department Name</b> &#8594;Categorical name of the product department name.
+				<br><b>Class Name</b> &#8594;Categorical name of the product class name.
 			</p>
 			<div class="row">
 				<div class="column">
